# x-python

./: .gitignore  .pre-commit-config.yaml  .pylintrc  ChangeLog  ChangeLog-spell-corrected.diff  Makefile  NEWS.md  README.rst  __pkginfo__.py  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: macos.yml  osx.yml  ubuntu.yml  windows.yml
admin-tools/: check-3.3-3.5-versions.sh  check-3.6-3.10-versions.sh  check-newest-versions.sh  checkout_common.sh  make-dist-3.3-3.5.sh  make-dist-3.6-3.10.sh  merge-for-3.3.sh  merge-for-3.6.sh  pyenv-3.6-3.10-versions  pyenv-newest-versions  setup-master.sh  setup-python-2.7.sh  setup-python-3.1.sh  setup-python-3.3.sh  setup-python-3.6.sh
test/: add-single-test.sh  add-test.sh  test-3.3-3.5-bytecode.sh  test-3.6-3.10-bytecode.sh  test-all-bytecode.sh  test-newest-bytecode.sh  test-single-version.sh  test_basic.py  test_data.py  test_functions.py  test_stmts.py  vmtest.py
test/examples/: 007_test_stange_sequence_ops.py  test_defining_functions_with_args_kwargs.py
test/examples/basic/: test_deleting_names.py  test_object_attrs_not-shared_with_class.py
test/examples/data/: test_fstring.py
test/examples/exceptions/: 010_test_reraise.py  test_catching_exceptions.py  test_coverage_issue_92.py
test/examples/expressions/: 006_test_comparisions.py  008_test_comprehesions.py  009_test_eval.py  test_comparisons.py
test/examples/stmts/: 001_pass.py  005_test_global.py  (+3 more)
xpython/: __main__.py  execfile.py  pyobj.py  version.py  version_info.py  vm.py  vmtrace.py
xpython/byteop/: __init__.py  byteop.py  byteop24.py  byteop25.py  byteop26.py  byteop27.py  byteop31.py  byteop311.py  byteop312.py  byteop32.py  byteop33.py  byteop34.py  byteop35.py  byteop36.py  byteop37.py  byteop38.py  byteop39.py  byteop39pypy.py  byteoppypy.py
xpython/stdlib/: __init__.py  builtins.py  inspect2.py  inspectfor32.py  types34.py
(+1 files in other folders)
