[build-system]
requires = [
    "setuptools",
]

build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Rocky Bernstein",	email = "rb@dustyfeet.com"},
    {name = "Ned Batchelder"},
    {name = "Paul Swartz"},
]

name = "x-python"
description = "Python cross-version byte-code interpeter"
dependencies = [
    "click",
    "xdis > 6.2",
]
readme = "README.rst"
license = "MIT"
keywords = ["Python bytecode", "bytecode", "disassembler"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.1",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://pypi.org/project/x-python/"
Downloads = "https://github.com/rocky/x-python/releases"

[project.optional-dependencies]
dev = [
    "flake8",
    "pre-commit",
    "pytest",
]

[project.scripts]
xpython   = "xpython.__main__:main"

[tool.pylint]
disable = ["W0511", "C103"]

[tool.setuptools.dynamic]
version = {attr = "xpython.version.__version__"}

[tool.setuptools.packages.find]
include = ["xpython"]  # Include all subpackages
